# klong

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/plans/: 2026-02-21-klong-implementation-design.md  2026-02-21-klong-plan.md
experiment/: Dockerfile  coding_prompt.py  generate_task_bank.py  task_bank.json
klong/agent/: scaffold.py
klong/agent/sandbox/: Dockerfile  docker_manager.py
klong/agent/tools/: __init__.py  base.py  bash_tool.py  file_tool.py  paper_reader.py  python_tool.py
klong/config/: __init__.py  settings.py
klong/evaluation/: __init__.py  judge.py  rubric.py
klong/research_factory/: __init__.py  blacklist.py  paper_collector.py  pdf_converter.py  rubric_generator.py  trajectory_distiller.py
klong/training/rl/: reward.py  rollout.py  trainer.py
klong/training/sft/: trainer.py
results/: experiment_report.md  generate_plots.py
scripts/: collect_papers.py  create_demo_data.py  evaluate.py  generate_synthetic_data.py  generate_trajectories.py  run_experiment.py  run_pipeline_demo.py  run_real_pipeline.py  train_rl.py  train_sft.py
tests/: test_config.py  test_docker_manager.py  test_integration.py  test_judge.py  test_paper_collector.py  test_rl_reward.py  test_rl_trainer.py  test_rubric.py  test_rubric_generator.py  test_scaffold.py  test_sft_trainer.py  test_tools.py  test_trajectory_dataset.py  test_trajectory_distiller.py  test_trajectory_splitter.py
